- Kim wants to throw exceptions rather then return null values from our factory, so I rolled back the changes to the value object Create methods.
- Finalized ChannelsController GET v. 0.9.

- Implemented simple unit test for ChannelsController

- Updated api-contract
